# agentic-hackathon-2026

./: .dockerignore  .gitignore  README.md
common/techcompany-sim-core/: README.md  pyproject.toml
common/techcompany-sim-core/src/techcompany_sim/core/: cli.py  generator.py  router.py  stream.py
uc1-supply-chain/: SCHEMA.md
uc1-supply-chain/techcompany-sim/: Dockerfile  README.md  pyproject.toml
uc1-supply-chain/techcompany-sim/k8s/: simulator.yaml
uc1-supply-chain/techcompany-sim/src/techcompany_sim/simulators/: uc1_supply_chain.py
uc2-app-store/: SCHEMA.md
uc2-app-store/techcompany-sim/: Dockerfile  README.md  pyproject.toml
uc2-app-store/techcompany-sim/k8s/: simulator.yaml
uc2-app-store/techcompany-sim/src/techcompany_sim/simulators/: uc2_app_store.py
uc3-genius-bar/: SCHEMA.md
uc3-genius-bar/techcompany-sim/: Dockerfile  README.md  pyproject.toml
uc3-genius-bar/techcompany-sim/k8s/: simulator.yaml
uc3-genius-bar/techcompany-sim/src/techcompany_sim/simulators/: uc3_genius_bar.py
uc4-devrel/: SCHEMA.md
uc4-devrel/techcompany-sim/: Dockerfile  README.md  pyproject.toml
uc4-devrel/techcompany-sim/k8s/: simulator.yaml
uc4-devrel/techcompany-sim/src/techcompany_sim/simulators/: uc4_devrel.py
uc5-hardware-failure/: SCHEMA.md
uc5-hardware-failure/techcompany-sim/: Dockerfile  README.md  pyproject.toml
uc5-hardware-failure/techcompany-sim/k8s/: simulator.yaml
uc5-hardware-failure/techcompany-sim/src/techcompany_sim/simulators/: uc5_hardware.py
