[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techcompany-sim-uc1"
version = "1.0.0"
description = "Hackathon data simulator for Techcompany Supply Chain"
requires-python = ">=3.11"
dependencies = [
    "techcompany-sim-core",
    "faker>=25.0.0",
    "pydantic>=2.7.0",
    "sse-starlette>=2.1.0",
]

[project.scripts]
sim-uc1 = "techcompany_sim.simulators.uc1_supply_chain:cli"
sim-generate-uc1 = "techcompany_sim.core.generator:cli_generate_uc1"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
