[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techcompany-sim-uc5"
version = "1.0.0"
description = "Hackathon data simulator for Techcompany Hardware Failure"
requires-python = ">=3.11"
dependencies = [
    "techcompany-sim-core",
    "faker>=25.0.0",
    "pydantic>=2.7.0",
    "sse-starlette>=2.1.0",
]

[project.scripts]
sim-uc5 = "techcompany_sim.simulators.uc5_hardware:cli"
sim-generate-uc5 = "techcompany_sim.core.generator:cli_generate_uc5"

[tool.setuptools.packages.find]
where = ["src"]
